--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <div class="img-container">
             <img src="http://chocolateusa.gjcourt.com/window.jpg" />
         </div>
+
+        <a>This is a hyperlink</a>
     </body>
     
 </html>
